--- a/client/src/pages/Search.css
+++ b/client/src/pages/Search.css
@@ -10,7 +10,15 @@
   margin-right: 10px;
   width: 300px;
   font-size: 20px;
+  font-weight: bold;
+  padding-left: 10px;
 }
-p {
-  text-align: center;
+
+.search-input:active,
+.search-input:focus {
+  background-color: #180c6a;
+}
+
+button.search-button {
+  cursor: pointer;
 }
